Fix image too wide on mobile

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -94,6 +94,8 @@ a
 
       .item-media
         img
+          +media-xs
+            max-width: 100%
           max-width: 110%
 
       .item-view-header, .item-body
